Corrected Error on CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ button {
 
 .future-hour {
     background-color: rgb(89, 133, 89);
-    bordere-color: rgb(39, 65, 39);
+    border-color: rgb(39, 65, 39);
 }
 
 
