--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,49 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 1;
+}
+
 textarea {
+    background: transparent;
+    border: none;
     resize: none;
+    color: #000000;
+    border-left: 1px solid black;
+    padding: 10px;
 }
 
-header {
-    border-bottom-width: 10px;
-    color: rgb(15, 15, 15);
+.jumbotron {
+    text-align: center;
+    background-color: transparent;
+    color: black;
+    border-radius: 0;
+    border-bottom: 10px solid black;
 }
 
-button {
-    background-color: rgb(170, 170, 41);
-    border-radius: 0px 5px 5px 0px;
-    font-size: 2em;
-    color: rgb(112, 112, 12);
+.description{
+    white-space: pre-wrap;
+}
+
+.time-block{
+    text-align: center;
+    border-radius: 15px;
+}
+
+.row {
+    white-space: pre-wrap;
+    height: 80px;
+    border-top: 1px solid white;;
+}
+
+.hour {
+    background-color: #ffffff;
+    color: #000000;
+    border-top: 1px dashed #000000;
 }
 
 .past {
-    background-color: rgb(109, 95, 95);
+    background-color: rgb(114, 108, 108);
     border-color: rgb(56, 47, 47);
 }
 
@@ -27,6 +55,19 @@ button {
 .future {
     background-color: rgb(89, 133, 89);
     border-color: rgb(39, 65, 39);
+}
+
+.saveBtn {
+    border-left: 1px solid black;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: #f3dc0e;
+    color: white;
+}
+
+.saveBtn i:hover {
+    font-size: 30px;
+    transition: all .5s ease-in-out;
 }
 
 
